option java_package = "fr.kissy.encoder.proto";
option java_outer_classname = "SdfProto";
option java_generic_services = false;

import "system.proto";
import "property.proto";

message Sdf {
    message Object {
        required string name = 10;
        repeated ObjectProperties objectProperties = 11;
    }

    message ObjectProperties {
        optional string type = 20;
        required System.Type systemType = 21;
        repeated Property properties = 22;
    }

    message Link {
        required string subject = 30;
        required string observer = 31;
        required System.Type subjectSystemType = 32;
        required System.Type observerSystemType = 33;
    }

    required string name = 1;
    repeated System systems = 2;
    repeated Object objects = 3;
    repeated Link links = 4;
}