option java_package = "fr.kissy.encoder.proto";
option java_outer_classname = "GdfProto";
option java_generic_services = false;

import "system.proto";
import "property.proto";

message Gdf {
    required string startupScene = 1;
    repeated Property properties = 2;
    repeated System systems = 3;
    repeated string scenes = 4;
}